docs: changes the page styles for fixing the element overscroll area defined on mobile

--- a/docs/.kask/propagate/index.css
+++ b/docs/.kask/propagate/index.css
@@ -82,7 +82,9 @@ body {
   width: 100vw;
 
   @media screen and (width<=800px) {
-    padding-bottom: 50vh;
+    & > main {
+      padding-bottom: 50vh;
+    }
   }
 
   @media screen and (800px<width) and (width<1700px) {
